fix gap between card and descrition

--- a/src/pages/GamePage/GamePage.css
+++ b/src/pages/GamePage/GamePage.css
@@ -134,7 +134,7 @@ body {
   margin-top: 5%;
   display: flex;
   justify-content: center;
-  gap: 130px;
+  gap: 200px;
   width: 100%;
 }
 
@@ -262,11 +262,10 @@ body {
   .card-text span {
     font-size: 15px;
   }
-  /* .bottom-container {
+  .bottom-container {
     display: flex;
-    margin-left: 20%;
-    width: 60%;
-  } */
+    gap: 130px;
+  }
   .description-box {
     width: 70px;
     height: 80px;
